--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.2'
 services:
 
-  elasticsearch: # <<< 1
+  elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.8.1
     ports:
       - "9200:9200"
@@ -13,7 +13,7 @@ services:
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - discovery.type=single-node
 
-  kibana: # <<< 2
+  kibana:
     image: docker.elastic.co/kibana/kibana:7.8.1
     links:
       - "elasticsearch"
@@ -25,7 +25,7 @@ services:
     networks:
       - elastic
 
-  fluentd: # <<< 3
+  fluentd:
     build: ./fluentd
     volumes:
       - ./fluentd/conf:/fluentd/etc
@@ -37,7 +37,7 @@ services:
       - "24224:24224"
       - "24224:24224/udp"
 
-  web: # <<< 4
+  web:
     image: httpd
     ports:
       - "80:80"
